fixed squished event logo in mobile, changed image width to cover

--- a/components/EventCard/style/styles.module.css
+++ b/components/EventCard/style/styles.module.css
@@ -13,7 +13,7 @@
     min-width: 100px;
     width: 100px;
     height: 100px;
-    object-fit: contain;
+    object-fit: cover;
     margin-right: 20px;
 }
 
@@ -109,6 +109,7 @@
     .event_card_img {
         width: 85px;
         height: 85px;
+        min-width: 85px;
         margin-right: 15px;
     }
 
